--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@vercel/postgres": "^0.8.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "next": "^14.2.3",
     "tailwindcss": "^3.4.3",
     "use-debounce": "^10.0.0"
